k8s-labs/tp/configmap-file-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cm-file-test
spec:
  containers:
  - name: test
    image: busybox
    command: ["sh", "-c", "cat /etc/config/app.conf && sleep 3600"]
    volumeMounts:
    - name: config-volume
      mountPath: /etc/config
  volumes:
  - name: config-volume
    configMap:
      name: app-config-files
