k8s-labs/tp/configmap-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cm-test
spec:
  containers:
  - name: cm-test
    image: busybox
    command: ["sh", "-c", "env | grep APP_ && sleep 3600"]
