k8s-labs/tp/pg-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres
spec:
  containers:
  - name: postgres
    image: postgres:15
    ports:
      - containerPort: 5432
    volumeMounts:
      - name: pgdata
        mountPath: /var/lib/postgresql/data
  volumes:
    - name: pgdata
      persistentVolumeClaim:
        claimName: pg-pvc
