k8s-labs/tp/web-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-2
  labels:
    app: myapp
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
      - name: data
        mountPath: /data
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: my-pvc
---
