k8s-labs/tp/pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  clusterIP: None   # HEADLESS
  selector:
    app: postgres
  ports:
    - port: 5432
      name: postgres
